--- a/An evaluation of Kim's filter.ipynb
+++ b/An evaluation of Kim's filter.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +105,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tabela com os parâmetros"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +200,7 @@
        "6  -0.355 -0.367 -0.382"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,6 +210,13 @@
     "                      \"Kim\"   : params_kim,\n",
     "                      \"Lam\"   : params_lam})\n",
     "table1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tabela com a verossimilhança"
    ]
   },
   {
@@ -279,6 +293,13 @@
     "                       \"Kim\":    [round(log_kim,2)],\n",
     "                       \"Lam\":    [round(log_lam,2)]})\n",
     "table2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observação: O valor da verossimilhança das colunas \"Kim\" e \"Lam\" foram calculados usando a minha função do filtro de Kim com o valor dos parâmetros descritos no livro (tabela 5.1, p.112). O valor da verossimilhança descrito no livro foi de $-176.33$ com o filtro de Kim e o valor encontrado por Lam (1980) foi de $-174.97$.  "
    ]
   },
   {
